<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@+id/txtHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtPersonName"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginStart="@dimen/edittext_margin"
        android:layout_marginEnd="@dimen/edittext_margin"
        android:layout_marginBottom="24dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/icon_padding"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:padding="@dimen/small_padding"
        android:textColorHint="@color/text_color_dark"
        app:layout_constraintBottom_toTopOf="@+id/txtForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginStart="@dimen/edittext_margin"
        android:layout_marginEnd="@dimen/edittext_margin"
        android:layout_marginBottom="24dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="@dimen/icon_padding"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="@dimen/small_padding"
        android:textColorHint="@color/text_color_dark"
        app:layout_constraintBottom_toTopOf="@+id/edtPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="password" />

    <ImageView
        android:id="@+id/imageMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/edtUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/music"
        android:contentDescription="@string/music_image" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/forgot_password"
        android:textColor="@color/text_color"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/text_color"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtCreatAccount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtCreatAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:focusable="true"
        android:fontFamily="@font/poppins"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/text_color_dark"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/txtHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtHaveAccount" />
</androidx.constraintlayout.widget.ConstraintLayout>